--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Css/index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="heading">HOME PAGE</div>
-
-    <div class="upload-container row">
-      <div class="upload-card col-4">
-        <div class="card-img">
-          <img src="">
+    <div class="content">
+      <header>
+        <div class="main-header">
+          <div class="menu-area">
+          <div class="header-menu">
+            <div class="menu-link">
+              <a href="">
+                <div class="menu-item">GAME MOBILE</div>
+              </a>
+              <a href="">
+                <div class="menu-item">ESPORTS</div>
+              </a>
+              <a href="">
+                <div class="menu-item">KHÁM PHÁ</div>
+              </a>
+              <a href="">
+                <div class="menu-item">MANGA/FILM</div>
+              </a>
+              <a href="">
+                <div class="menu-item">HÓNG</div>
+              </a>
+              <a href="">
+                <div class="menu-item">CỘNG ĐỒNG</div>
+              </a>
+            </div>
+            <div class="menu-search-bar">
+              <input class="search-bar" type="text" placeholder="Tìm kiếm..." />
+              <a href="">
+                <div class="search-icon"><i class="fa-solid icon-search fa-magnifying-glass"></i></div>
+              </a>
+            </div>
+            <div class="header-social">
+            
+            <a href=""><div class="social-icon"><i class="fa-brands icon-social fa-facebook-f"></i></div></a>
+            <a href=""><div class="social-icon"><i class="fa-brands icon-social fa-youtube"></i></div></a>
+            <a href=""><div class="social-icon"><i class="fa-solid icon-social fa-wifi"></i></div></a>
+            
+          </div>
+            <a href="">
+            <div class="logo">
+              <div class="logo-img">
+                <img
+                  src="https://gamek.mediacdn.vn/web_images/gamek_logo_30052022.svg"
+                />
+              </div>
+            </div>
+          </a>
+          </div>
+          </div>
         </div>
-        <div class="card-title fw-bold"></div>
-        <div class="card-author text-secondary"></div>
-      </div>
+      </header>
     </div>
 
     <script type="module" src="Js/index.js"></script>
