--- a/public/index.html
+++ b/public/index.html
@@ -5,66 +5,204 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Css/index.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="content">
       <header>
         <div class="main-header">
           <div class="menu-area">
-          <div class="header-menu">
-            <div class="menu-link">
-              <a href="">
-                <div class="menu-item">GAME MOBILE</div>
-              </a>
-              <a href="">
-                <div class="menu-item">ESPORTS</div>
-              </a>
-              <a href="">
-                <div class="menu-item">KHÁM PHÁ</div>
-              </a>
-              <a href="">
-                <div class="menu-item">MANGA/FILM</div>
-              </a>
-              <a href="">
-                <div class="menu-item">HÓNG</div>
-              </a>
-              <a href="">
-                <div class="menu-item">CỘNG ĐỒNG</div>
-              </a>
-            </div>
-            <div class="menu-search-bar">
-              <input class="search-bar" type="text" placeholder="Tìm kiếm..." />
-              <a href="">
-                <div class="search-icon"><i class="fa-solid icon-search fa-magnifying-glass"></i></div>
-              </a>
-            </div>
-            <div class="header-social">
-            
-            <a href=""><div class="social-icon"><i class="fa-brands icon-social fa-facebook-f"></i></div></a>
-            <a href=""><div class="social-icon"><i class="fa-brands icon-social fa-youtube"></i></div></a>
-            <a href=""><div class="social-icon"><i class="fa-solid icon-social fa-wifi"></i></div></a>
-            
-          </div>
-            <a href="">
-            <div class="logo">
-              <div class="logo-img">
-                <img
-                  src="https://gamek.mediacdn.vn/web_images/gamek_logo_30052022.svg"
-                />
+            <div class="header-menu">
+              <div class="menu-link">
+                <a href="">
+                  <div class="menu-item">GAME MOBILE</div>
+                </a>
+                <a href="">
+                  <div class="menu-item">ESPORTS</div>
+                </a>
+                <a href="">
+                  <div class="menu-item">KHÁM PHÁ</div>
+                </a>
+                <a href="">
+                  <div class="menu-item">MANGA/FILM</div>
+                </a>
+                <a href="">
+                  <div class="menu-item">HÓNG</div>
+                </a>
+                <a href="">
+                  <div class="menu-item">CỘNG ĐỒNG</div>
+                </a>
               </div>
+              <div class="menu-search-bar">
+                <input
+                  class="search-bar"
+                  type="text"
+                  placeholder="Tìm kiếm..."
+                />
+                <a href="">
+                  <div class="search-icon">
+                    <i class="fa-solid icon-search fa-magnifying-glass"></i>
+                  </div>
+                </a>
+              </div>
+              <div class="header-social">
+                <a href=""
+                  ><div class="social-icon">
+                    <i class="fa-brands icon-social fa-facebook-f"></i></div
+                ></a>
+                <a href=""
+                  ><div class="social-icon">
+                    <i class="fa-brands icon-social fa-youtube"></i></div
+                ></a>
+                <a href=""
+                  ><div class="social-icon">
+                    <i class="fa-solid icon-social fa-wifi"></i></div
+                ></a>
+              </div>
+              <a href="">
+                <div class="logo">
+                  <div class="logo-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/web_images/gamek_logo_30052022.svg"
+                    />
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="navigation">
+          <a href="">
+            <div class="navigation-home">
+              <i class="fa-solid fa-house-chimney"></i>
             </div>
           </a>
-          </div>
+          <div class="navigation-link">
+            <a href="">
+              <div class="navigation-item">GUNNY ORIGIN</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">LMHT</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">LIÊN QUÂN MOBILE</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">LMHT: TỐC CHIẾN</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">GAMING GEAR</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">GAME ONLINE</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">PC/CONSOLE</div>
+            </a>
+            <a href="">
+              <div class="navigation-item">360 GAMEFI</div>
+            </a>
           </div>
         </div>
       </header>
     </div>
+    <footer>
+      <div class="footer-nav">
+        <div class="footer-nav-container">
+          <a href="">
+            <div class="footer-nav-item">TRANG CHỦ</div>
+          </a>
+          <a href="">
+            <div class="footer-nav-item">GAME ONLINE</div>
+          </a>
+          <a href="">
+            <div class="footer-nav-item">THỊ TRƯỜNG</div>
+          </a>
+          <a href="">
+            <div class="footer-nav-item">PC CONSOLE</div>
+          </a>
+          <a href="">
+            <div class="footer-nav-item">ESPORTS</div>
+          </a>
+          <a href="">
+            <div class="footer-nav-item">GAME MOBILE</div>
+          </a>
+          <a href="">
+            <div class="footer-nav-item">RSS</div>
+          </a>
+        </div>
+      </div>
+      <div class="footer-main">
+        <div class="footer-main-container">
+          <div class="footer-main-logo">
+            <a href="">
+              <div class="footer-logo">
+                <img src="https://vccorp.mediacdn.vn/vccorp-s.png" />
+              </div>
+            </a>
+          </div>
+          <div class="footer-content">
+            <div class="footer-subcontent">
+              <p>© Copyright 2007 - 2023 – Công ty Cổ phần VCCorp</p>
+              <p>
+                Tầng 17, 19, 20, 21 Toà nhà Center Building - Hapulico Complex,
+                Số 1 Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.
+              </p>
+              <p>
+                Giấy phép thiết lập trang thông tin điện tử tổng hợp trên
+                internet số 3634/GP-TTĐT do Sở
+              </p>
+              <p>Thông tin và Truyền thông TP Hà Nội cấp ngày 06/09/2017</p>
+            </div>
+            <div class="footer-maincontent">
+              <div class="footer-wall"></div>
+              <div class="maincontent-text">
+                <p class="footer-title">GameK:</p>
+                <p>
+                  Tầng 21, Tòa nhà Center Building - Hapulico Complex, Số 1
+                  Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.
+                </p>
+                <p>Điện thoại: 024.7309.5555 Máy lẻ 41301</p>
+                <p>Email: <a href="" class="footer-link">info@gamek.vn</a></p>
+                <p>Chịu trách nhiệm quản lý nội dung: Bà Nguyễn Bích Minh</p>
+                <p>VPĐD tại TP.HCM: Tầng 6 Tòa nhà 123</p>
+                <p>123 Võ Văn Tần, phường 6, quận 3, Tp. HCM</p>
+              </div>
+            </div>
+            <div class="footer-maincontent">
+              <div class="footer-wall"></div>
+              <div class="maincontent-text">
+                <p class="footer-title">
+                  Liên hệ quảng cáo: <span class="footer-focus">Admicro</span>
+                </p>
+                <p>Hotline hỗ trợ quảng cáo: 0794463333</p>
+                <p>Email: giaitrixahoi@admicro.vn</p>
+                <p>Hỗ trợ & CSKH: Admicro</p>
+                <p>Address: Tầng 20, Tòa nhà Center Building - Hapulico</p>
+                <p>Complex, Số 1 Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.</p>
+                <p>
+                  <a class="footer-underlined" href="">Chính sách bảo mật</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="Js/index.js"></script>
   </body>
