Init 04: - Them Featured section - Them Advert section

--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,170 @@
           </div>
         </div>
       </header>
+
+      <main>
+        <div class="head-advert-container">
+          <a href="">
+            <div class="head-advert">
+              <img
+                src="https://adi.admicro.vn/adt/adn/2021/09/980x9-adx612fb25685ae5.jpg"
+              />
+            </div>
+          </a>
+        </div>
+        <div class="main-container">
+          <div class="main-section">
+            <div class="featured-section">
+              <div class="featured-card featured-large">
+                <a href="">
+                  <div class="featured-title first-text">
+                    Bị leak sớm trailer GTA 6, NPH game cay cú, đưa ra một loạt
+                    phản ứng thái quá
+                  </div>
+                  <div class="featured-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/zoom/399_262/133514250583805952/2023/12/5/1x-1-1701745425272-170174542540886505090-0-0-649-1038-crop-1701745564183773149605.png"
+                    />
+                  </div>
+                </a>
+              </div>
+              <div class="featured-card featured-medium">
+                <a href="">
+                  <div class="featured-title second-text">
+                    Bom tấn flop nhất năm lỗ hơn 12.000 tỷ, thê thảm đến mức
+                    Marvel không dám công bố doanh thu
+                  </div>
+                  <div class="featured-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/zoom/278_262/133514250583805952/2023/12/6/avatar1701856455645-1701856457062399860611.png"
+                    />
+                  </div>
+                </a>
+              </div>
+              <div class="featured-card featured-small">
+                <a href="">
+                  <div class="featured-title third-text">
+                    Chuyển nhượng của một đội LPL ngỡ như “phim drama”, đầy đủ
+                    từ phản bội cho tới cả “plot twist”
+                  </div>
+                  <div class="featured-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/zoom/399_163/133514250583805952/2023/12/6/avatar1701832416408-1701832417177173040824.png"
+                    />
+                  </div>
+                </a>
+              </div>
+              <div class="featured-card featured-exsmall">
+                <a href="">
+                  <div class="featured-title third-text">
+                    Tò mò ghé thăm trang cá nhân nữ coser xinh đẹp của tựa game
+                    nhà VNG, cộng đồng game "khóc thét" vì u mê không lối thoát
+                  </div>
+                  <div class="featured-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/zoom/278_163/133514250583805952/2023/12/6/3757955241729660564143644907286465706830098n-1701856587730933537617.jpg"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="secondary-section">
+              <div class="listed-section">
+                <div class="listed-card">
+                  <a href="">
+                    <div class="listed-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/192_129/133514250583805952/2023/12/6/avatar1701852016432-17018520166771014303893.png"
+                      />
+                    </div>
+                    <div class="listed-title">
+                      T1 bỗng nhiên trở thành nạn nhân từ màn tranh cãi của cộng
+                      đồng game thủ Việt khiến nhiều người bức xúc
+                    </div>
+                  </a>
+                </div>
+                <div class="listed-card">
+                  <a href="">
+                    <div class="listed-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/192_129/133514250583805952/2023/12/6/avatar1701852016432-17018520166771014303893.png"
+                      />
+                    </div>
+                    <div class="listed-title">
+                      T1 bỗng nhiên trở thành nạn nhân từ màn tranh cãi của cộng
+                      đồng game thủ Việt khiến nhiều người bức xúc
+                    </div>
+                  </a>
+                </div>
+                <div class="listed-card">
+                  <a href="">
+                    <div class="listed-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/192_129/133514250583805952/2023/12/6/avatar1701852016432-17018520166771014303893.png"
+                      />
+                    </div>
+                    <div class="listed-title">
+                      T1 bỗng nhiên trở thành nạn nhân từ màn tranh cãi của cộng
+                      đồng game thủ Việt khiến nhiều người bức xúc
+                    </div>
+                  </a>
+                </div>
+                <div class="listed-card">
+                  <a href="">
+                    <div class="listed-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/192_129/133514250583805952/2023/12/6/avatar1701852016432-17018520166771014303893.png"
+                      />
+                    </div>
+                    <div class="listed-title">
+                      T1 bỗng nhiên trở thành nạn nhân từ màn tranh cãi của cộng
+                      đồng game thủ Việt khiến nhiều người bức xúc
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="advert-section">
+            <div class="advert-item-small">
+              <a href="">
+                <div class="advert-img">
+                  <img
+                    src="https://adi.admicro.vn/adt/adn/2020/03/lavab-adx5e65bfc96e359.gif"
+                  />
+                </div>
+              </a>
+            </div>
+            <div class="advert-item-small">
+              <a href="">
+                <div class="advert-img">
+                  <img
+                    src="https://adi.admicro.vn/adt/adn/2020/03/lavab-adx5e65bfc96e359.gif"
+                  />
+                </div>
+              </a>
+            </div>
+            <div class="advert-item-large">
+              <a href="">
+                <div class="advert-img">
+                  <img
+                    src="https://adi.admicro.vn/adt/adn/2019/06/logia-adx5d12d78b7efbe.gif"
+                  />
+                </div>
+              </a>
+            </div>
+            <div class="advert-item-large ad-sticky">
+              <a href="">
+                <div class="advert-img">
+                  <img
+                    src="https://adi.admicro.vn/adt/adn/2019/06/logia-adx5d12d78b7efbe.gif"
+                  />
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
     <footer>
       <div class="footer-nav">
