Init 05: - Them sticky cho navigation (WIP) - Them phan danh cho ban

--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,175 @@
                     </div>
                   </a>
                 </div>
+                <div class="listed-card">
+                  <a href="">
+                    <div class="listed-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/192_129/133514250583805952/2023/12/6/avatar1701852016432-17018520166771014303893.png"
+                      />
+                    </div>
+                    <div class="listed-title">
+                      T1 bỗng nhiên trở thành nạn nhân từ màn tranh cãi của cộng
+                      đồng game thủ Việt khiến nhiều người bức xúc
+                    </div>
+                  </a>
+                </div>
+                <div class="listed-card">
+                  <a href="">
+                    <div class="listed-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/192_129/133514250583805952/2023/12/6/avatar1701852016432-17018520166771014303893.png"
+                      />
+                    </div>
+                    <div class="listed-title">
+                      T1 bỗng nhiên trở thành nạn nhân từ màn tranh cãi của cộng
+                      đồng game thủ Việt khiến nhiều người bức xúc
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="side-section">
+                <div class="recommend-section">
+                  <div class="recommend-heading">DÀNH CHO BẠN</div>
+                  <div class="recommend-container">
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="recommend-wall"></div>
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="recommend-wall"></div>
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="recommend-wall"></div>
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="recommend-section">
+                  <div class="magazine-heading">EMAGAZINE</div>
+                  <div class="recommend-container">
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="recommend-wall"></div>
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                    <div class="recommend-wall"></div>
+                    <div class="recommend-card">
+                      <a href="">
+                        <div class="recommend-content">
+                          <div class="recommend-img">
+                            <img
+                              src="https://gamek.mediacdn.vn/zoom/80_50/133514250583805952/2023/6/21/avatar1687322927401-1687322927724234933148.png"
+                            />
+                          </div>
+                          <div class="recommend-title">
+                            Riot tự tung bằng chứng cho thấy Aphelios mới là
+                            "200 năm kinh nghiệm" làm game
+                          </div>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="bottom-section">
+                <div class="remark-card">
+                  <div class="remark-heading">ĐÁNG CHÚ Ý</div>
+                  <div class="recommend-title"></div>
+                </div>
               </div>
             </div>
           </div>
