Init 06: - Them phan dang chu y - Them sticky cho navbar

--- a/public/index.html
+++ b/public/index.html
@@ -404,11 +404,19 @@
                   </div>
                 </div>
               </div>
-              <div class="bottom-section">
-                <div class="remark-card">
-                  <div class="remark-heading">ĐÁNG CHÚ Ý</div>
-                  <div class="recommend-title"></div>
-                </div>
+            </div>
+            <div class="bottom-section">
+              <div class="remark-card">
+                <div class="remark-heading">ĐÁNG CHÚ Ý</div>
+                <a href="">
+                  <div class="remark-title">
+                    Bom tấn nổi tiếng một thời, đã đóng cửa vào năm 2020 sắp
+                    quay lại thị trường Việt Nam?
+                  </div>
+                </a>
+                <a href="">
+                  <div class="remark-detail">Chi tiết</div>
+                </a>
               </div>
             </div>
           </div>
