--- a/public/index.html
+++ b/public/index.html
@@ -418,6 +418,40 @@
                   <div class="remark-detail">Chi tiết</div>
                 </a>
               </div>
+              <div class="recent-section">
+                <div class="recent-heading">
+                  <div class="recent-heading-text">MỚI CẬP NHẬT</div>
+                </div>
+                <div class="recent-container">
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a href="">
+                        <img
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/9/avatar1702112830521-17021128308761221146901-0-38-280-486-crop-17021129700721075675624.jpg"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Nhá hàng nhân vật mới tại TGA, Honkai: Star Rail khiến
+                          fan điêu đứng hơn cả việc giật giải
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Xuất hiện chỉ vỏn vẹn vài giây, thế nhưng nhân vật này
+                        đã khiến cả cộng đồng Honkai: Star Rail phải mê mẩn.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>09/12/2023</span>
+                        <span>18:32</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="advert-section">
