Init 08: - Sua navbar - Them du lieu cho db.json

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
             </div>
           </div>
         </div>
-        <div class="navigation">
+        <div class="navigation nonstick-nav">
           <a href="">
             <div class="navigation-home">
               <i class="fa-solid fa-house-chimney"></i>
@@ -425,8 +425,8 @@
                 <div class="recent-container">
                   <div class="recent-card">
                     <div class="recent-img">
-                      <a href="">
-                        <img
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
                           src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/9/avatar1702112830521-17021128308761221146901-0-38-280-486-crop-17021129700721075675624.jpg"
                         />
                       </a>
