init 10: - Them trang chi tiet(WIP) - Them nut xem them

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
           <div class="main-section">
             <div class="featured-section">
               <div class="featured-card featured-large">
-                <a href="">
+                <a href="detail.html">
                   <div class="featured-title first-text">
                     Bị leak sớm trailer GTA 6, NPH game cay cú, đưa ra một loạt
                     phản ứng thái quá
@@ -640,6 +640,9 @@
                     </div>
                   </div>
                 </div>
+                <button class="recent-viewmore">
+                   XEM THÊM
+                </button>
               </div>
             </div>
           </div>
