Init 11: - Them heading, tin lien quan cho trang chi tiet

--- a/public/detail.html
+++ b/public/detail.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="content">
-    <header>
+      <header>
         <div class="main-header">
           <div class="menu-area">
             <div class="header-menu">
@@ -119,7 +119,7 @@
           </div>
         </div>
       </header>
-     
+
       <main>
         <div class="main-container">
           <div class="main-section">
@@ -127,16 +127,130 @@
               <div class="category-card">
                 <div class="category-wall"></div>
                 <div class="category-name">
-                  <a href="index.html">
-                    GAMEK
-                  </a>
+                  <a href="index.html"> GAMEK </a>
                 </div>
                 <div class="category-arrow">
                   <i class="fa-solid fa-angle-right"></i>
                 </div>
                 <div class="category-name">
+                  <a href=""> MOBILE & SOCIAL </a>
+                </div>
+              </div>
+              <div class="upload-heading">
+                <div class="upload-title">
+                  Nhá hàng nhân vật mới tại TGA, Honkai: Star Rail khiến fan
+                  điêu đứng hơn cả việc giật giải
+                </div>
+                <div class="upload-info">
+                  <div class="upload-author">Thế Anh</div>
+                  <div class="upload-meta">
+                    <span class="source">Phụ Nữ Mới</span> |
+                    <span class="date">09/12/2023</span>
+                    <span class="time">06:32 PM</span>
+                  </div>
+                </div>
+                <div class="upload-social">
                   <a href="">
-                    MOBILE & SOCIAL
+                    <div class="social-card facebook">
+                      <div class="social-card-icon">
+                        <i class="fa-brands fa-square-facebook"></i>
+                      </div>
+                      <div class="social-card-name">Chia sẻ</div>
+                    </div>
+                  </a>
+                  <a href="">
+                    <div class="social-card like">
+                      <div class="social-card-icon">
+                        <i class="fa-solid fa-thumbs-up"></i>
+                      </div>
+                      <div class="social-card-name">
+                        Thích <span class="like-count">1</span>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="primary-section">
+              <div class="related-container related-sticky">
+                <div class="related-roof"></div>
+                <div class="related-heading">TIN LIÊN QUAN</div>
+                <div class="related-wall"></div>
+                <a href="detail.html">
+                  <div class="related-featured">
+                    <div class="related-featured-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/170_113/133514250583805952/2023/12/9/407270672742574517891918568599357162686626n-1702111186090954646435.jpg"
+                      />
+                    </div>
+                    <div class="related-featured-title">
+                      Thử sức ở giải TFT thế giới, 5 đại diện Việt Nam lần lượt
+                      "gục ngã", còn đúng một cái tên đủ điều kiện đi tiếp
+                    </div>
+                  </div>
+                </a>
+                <div class="related-wall"></div>
+                <div class="related-card">
+                  <div class="related-card-icon">
+                    <i class="fa-solid fa-newspaper"></i>
+                  </div>
+                  <a href="detail.html">
+                    <div class="related-card-title">
+                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
+                      đảo cả làng game Việt Nam
+                    </div>
+                  </a>
+                </div>
+                <div class="related-wall"></div>
+                <div class="related-card">
+                  <div class="related-card-icon">
+                    <i class="fa-solid fa-newspaper"></i>
+                  </div>
+                  <a href="detail.html">
+                    <div class="related-card-title">
+                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
+                      đảo cả làng game Việt Nam
+                    </div>
+                  </a>
+                </div>
+                <div class="related-roof"></div>
+                <div class="related-heading">TIN ĐÁNG ĐỌC</div>
+                <div class="related-wall"></div>
+                <a href="detail.html">
+                  <div class="related-featured">
+                    <div class="related-featured-img">
+                      <img
+                        src="https://gamek.mediacdn.vn/zoom/170_113/133514250583805952/2023/12/9/407270672742574517891918568599357162686626n-1702111186090954646435.jpg"
+                      />
+                    </div>
+                    <div class="related-featured-title">
+                      Thử sức ở giải TFT thế giới, 5 đại diện Việt Nam lần lượt
+                      "gục ngã", còn đúng một cái tên đủ điều kiện đi tiếp
+                    </div>
+                  </div>
+                </a>
+                <div class="related-wall"></div>
+                <div class="related-card">
+                  <div class="related-card-icon">
+                    <i class="fa-solid fa-newspaper"></i>
+                  </div>
+                  <a href="detail.html">
+                    <div class="related-card-title">
+                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
+                      đảo cả làng game Việt Nam
+                    </div>
+                  </a>
+                </div>
+                <div class="related-wall"></div>
+                <div class="related-card">
+                  <div class="related-card-icon">
+                    <i class="fa-solid fa-newspaper"></i>
+                  </div>
+                  <a href="detail.html">
+                    <div class="related-card-title">
+                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
+                      đảo cả làng game Việt Nam
+                    </div>
                   </a>
                 </div>
               </div>
@@ -182,7 +296,7 @@
           </div>
         </div>
       </main>
-      </div>
+    </div>
 
     <footer>
       <div class="footer-nav">
@@ -267,5 +381,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="Js/detail.js"></script>
   </body>
 </html>
