--- a/public/detail.html
+++ b/public/detail.html
@@ -172,86 +172,190 @@
               </div>
             </div>
             <div class="primary-section">
-              <div class="related-container related-sticky">
-                <div class="related-roof"></div>
-                <div class="related-heading">TIN LIÊN QUAN</div>
-                <div class="related-wall"></div>
-                <a href="detail.html">
-                  <div class="related-featured">
-                    <div class="related-featured-img">
-                      <img
-                        src="https://gamek.mediacdn.vn/zoom/170_113/133514250583805952/2023/12/9/407270672742574517891918568599357162686626n-1702111186090954646435.jpg"
-                      />
-                    </div>
-                    <div class="related-featured-title">
-                      Thử sức ở giải TFT thế giới, 5 đại diện Việt Nam lần lượt
-                      "gục ngã", còn đúng một cái tên đủ điều kiện đi tiếp
-                    </div>
-                  </div>
-                </a>
-                <div class="related-wall"></div>
-                <div class="related-card">
-                  <div class="related-card-icon">
-                    <i class="fa-solid fa-newspaper"></i>
-                  </div>
+              <div class="related-section related-sticky">
+                <div class="related-container">
+                  <div class="related-roof"></div>
+                  <div class="related-heading">TIN LIÊN QUAN</div>
+                  <div class="related-wall"></div>
                   <a href="detail.html">
-                    <div class="related-card-title">
-                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
-                      đảo cả làng game Việt Nam
+                    <div class="related-featured">
+                      <div class="related-featured-img">
+                        <img
+                          src="https://gamek.mediacdn.vn/zoom/170_113/133514250583805952/2023/12/9/407270672742574517891918568599357162686626n-1702111186090954646435.jpg"
+                        />
+                      </div>
+                      <div class="related-featured-title">
+                        Thử sức ở giải TFT thế giới, 5 đại diện Việt Nam lần
+                        lượt "gục ngã", còn đúng một cái tên đủ điều kiện đi
+                        tiếp
+                      </div>
                     </div>
                   </a>
+                  <div class="related-wall"></div>
+                  <div class="related-card">
+                    <div class="related-card-icon">
+                      <i class="fa-solid fa-newspaper"></i>
+                    </div>
+                    <a href="detail.html">
+                      <div class="related-card-title">
+                        MapleStory R: Evolution đã chính thức ra mắt và làm
+                        khuấy đảo cả làng game Việt Nam
+                      </div>
+                    </a>
+                  </div>
+                  <div class="related-wall"></div>
+                  <div class="related-card">
+                    <div class="related-card-icon">
+                      <i class="fa-solid fa-newspaper"></i>
+                    </div>
+                    <a href="detail.html">
+                      <div class="related-card-title">
+                        MapleStory R: Evolution đã chính thức ra mắt và làm
+                        khuấy đảo cả làng game Việt Nam
+                      </div>
+                    </a>
+                  </div>
+                  <div class="related-roof"></div>
+                  <div class="related-heading">TIN ĐÁNG ĐỌC</div>
+                  <div class="related-wall"></div>
+                  <a href="detail.html">
+                    <div class="related-featured">
+                      <div class="related-featured-img">
+                        <img
+                          src="https://gamek.mediacdn.vn/zoom/170_113/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </div>
+                      <div class="related-featured-title">
+                        Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng
+                        gượng, có lẽ đã đến lúc kết thúc một huyền thoại
+                      </div>
+                    </div>
+                  </a>
+                  <div class="related-wall"></div>
+                  <div class="related-card">
+                    <div class="related-card-icon">
+                      <i class="fa-solid fa-newspaper"></i>
+                    </div>
+                    <a href="detail.html">
+                      <div class="related-card-title">
+                        MapleStory R: Evolution đã chính thức ra mắt và làm
+                        khuấy đảo cả làng game Việt Nam
+                      </div>
+                    </a>
+                  </div>
+                  <div class="related-wall"></div>
+                  <div class="related-card">
+                    <div class="related-card-icon">
+                      <i class="fa-solid fa-newspaper"></i>
+                    </div>
+                    <a href="detail.html">
+                      <div class="related-card-title">
+                        MapleStory R: Evolution đã chính thức ra mắt và làm
+                        khuấy đảo cả làng game Việt Nam
+                      </div>
+                    </a>
+                  </div>
                 </div>
-                <div class="related-wall"></div>
-                <div class="related-card">
-                  <div class="related-card-icon">
-                    <i class="fa-solid fa-newspaper"></i>
-                  </div>
-                  <a href="detail.html">
-                    <div class="related-card-title">
-                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
-                      đảo cả làng game Việt Nam
-                    </div>
-                  </a>
+              </div>
+              <div class="detail-section">
+                <div class="detail-subtitle">
+                  Xuất hiện chỉ vỏn vẹn vài giây, thế nhưng nhân vật này đã
+                  khiến cả cộng đồng Honkai: Star Rail phải mê mẩn.
                 </div>
-                <div class="related-roof"></div>
-                <div class="related-heading">TIN ĐÁNG ĐỌC</div>
-                <div class="related-wall"></div>
-                <a href="detail.html">
-                  <div class="related-featured">
-                    <div class="related-featured-img">
-                      <img
-                        src="https://gamek.mediacdn.vn/zoom/170_113/133514250583805952/2023/12/9/407270672742574517891918568599357162686626n-1702111186090954646435.jpg"
-                      />
-                    </div>
-                    <div class="related-featured-title">
-                      Thử sức ở giải TFT thế giới, 5 đại diện Việt Nam lần lượt
-                      "gục ngã", còn đúng một cái tên đủ điều kiện đi tiếp
-                    </div>
-                  </div>
-                </a>
-                <div class="related-wall"></div>
-                <div class="related-card">
-                  <div class="related-card-icon">
-                    <i class="fa-solid fa-newspaper"></i>
-                  </div>
-                  <a href="detail.html">
-                    <div class="related-card-title">
-                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
-                      đảo cả làng game Việt Nam
-                    </div>
-                  </a>
+                <div class="detail-para">
+                  Vừa qua, Honkai: Star Rail đã xuất sắc chiến thắng đề cử Best
+                  Mobile Game của giải thưởng The Game Awards (TGA) danh giá.
+                  Tại lễ trao giải của TGA, “con cưng” nhà miHoYo đã công bố một
+                  đoạn trailer giới thiệu mới toanh, khiến khán giả toàn cầu vô
+                  cùng bất ngờ. Dù chỉ mang mục đích quảng cáo và giới thiệu sơ
+                  bộ về trò chơi, thế nhưng nhiều game thủ vẫn “soi” ra được một
+                  “Easter Egg” thú vị. Cụ thể, đó chính là sự xuất hiện của một
+                  nữ kiếm sĩ bí ẩn trong những giây cuối cùng.
                 </div>
-                <div class="related-wall"></div>
-                <div class="related-card">
-                  <div class="related-card-icon">
-                    <i class="fa-solid fa-newspaper"></i>
+                <div class="detail-thumbnail">
+                  <div class="detail-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/133514250583805952/2023/12/9/uquew-1421-1702112831033-1702112831156424441773.jpg"
+                    />
                   </div>
-                  <a href="detail.html">
-                    <div class="related-card-title">
-                      MapleStory R: Evolution đã chính thức ra mắt và làm khuấy
-                      đảo cả làng game Việt Nam
-                    </div>
-                  </a>
+                  <div class="detail-img-subtitle">
+                    Honkai: Star Rail đã có một trailer giới thiệu đầy ấn tượng
+                    tại TGA.
+                  </div>
+                </div>
+                <div class="detail-thumbnail">
+                  <div class="detail-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/133514250583805952/2023/12/9/tet-1422-1702112832030-1702112832130136645743.jpg"
+                    />
+                  </div>
+                  <div class="detail-img-subtitle">
+                    Trong đó, sự xuất hiện của nhân vật bí ẩn này đã khiến cộng
+                    đồng game thủ dậy sóng.
+                  </div>
+                </div>
+                <div class="detail-para">
+                  Nguyên do là bởi nhân vật này rất giống với 1 trong bộ ba
+                  “nguyên tử” của miHoYo - Raiden Mei. Cùng với Bronya và Kiana,
+                  đây là 3 mỹ nữ đã từng xuất hiện trong hầu hết các sản phẩm
+                  đình đám của miHoYo với nhiều tên gọi và thân phận khác biệt.
+                  Hiện tại, Raiden đã có một phiên bản khác là Raiden Shogun
+                  trong Genshin Impact và chưa xuất hiện ở Honkai: Star Rail.
+                  Chính vì vậy, màn giới thiệu này khả năng cao sẽ là bước đệm
+                  đầu tiên để cô nàng dấn thân sang trò chơi mới.
+                </div>
+                <div class="detail-thumbnail">
+                  <div class="detail-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/133514250583805952/2023/12/9/whitecrow4444-digital-art-raiden-mei-honkai-impact-artwork-hd-wallpaper-preview-1424-1702112832767-1702112832857372282399.jpg"
+                    />
+                  </div>
+                  <div class="detail-img-subtitle">
+                    Raiden Mei là một trong những nhân vật chính rất được ưa
+                    chuộng của vũ trụ của miHoYo.
+                  </div>
+                </div>
+                <div class="detail-para">
+                  Khỏi phải nói, cộng đồng Honkai: Star Rail đã vui mừng đến
+                  nhường nào với màn xuất hiện này. Trên khắp các diễn đàn lớn,
+                  nhỏ, fan hâm mộ đang trở nên bùng nổ và đưa ra vô vàn dự đoán
+                  khác nhau. Có người cho rằng, việc Raiden Mei “chuyển sinh” sẽ
+                  là bước ngoặt trọng đại, ảnh hưởng to lớn đến cốt truyện của
+                  Honkai: Star Rail. Trong khi đó, cũng có không ít ý kiến đồn
+                  đoán cô nàng sẽ là “cột mốc” khởi đầu, giúp miHoYo tiếp tục ra
+                  mắt Kiana để hoàn thiện bộ 3 trong tương lai.
+                </div>
+                <div class="detail-thumbnail">
+                  <div class="detail-img">
+                    <img
+                      src="https://gamek.mediacdn.vn/133514250583805952/2023/12/9/uqequeqq-1428-1702112833441-17021128335691601605969.jpg"
+                    />
+                  </div>
+                  <div class="detail-img-subtitle">
+                    Cả thế giới đang bàn tán trước màn debut đẳng cấp của cô
+                    nàng này.
+                  </div>
+                </div>
+                <div class="detail-para">
+                  "Chúng ta đã có Bronyas, sẽ có Mei và chỉ còn thiếu Kiana
+                  thôi!";
+                </div>
+                <div class="detail-para">
+                  "Được rồi, đưa Kiana cho chúng tôi đi Hoyo";
+                </div>
+                <div class="detail-para">
+                  "Tôi sẽ bỏ qua mọi Banner để săn lùng cô nàng này";
+                </div>
+                <div class="detail-para">
+                  "Raiden Mei, Raiden Ei, liệu cô ta là Raiden i chăng?...";
+                </div>
+                <div class="detail-para">
+                  Hiện tại, phía NPH vẫn chưa đưa ra thêm bất cứ thông tin cụ
+                  thể nào khác về nhân vật mới. Tuy nhiên, người chơi có thể
+                  hoàn toàn yên tâm vì miHoYo luôn có chủ đích trong mọi hành
+                  động của họ. Có lẽ trong năm 2024, Honkai: Star Rail sẽ có
+                  nhiều chuyển biến tích cực để thỏa lòng mong đợi của cộng đồng
+                  game thủ.
                 </div>
               </div>
             </div>
